<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dodam</string>
    <string name="register_language">select your language</string>
    <string name="survey_reason">why do you want to learn korean</string>
    <string name="survey_country">where are you from</string>
    <string name="survey_exp">have you ever learned korean</string>
    <string name="positive">yes</string>
    <string name="negative">no</string>
    <string name="study_syllable">syllable</string>
    <string name="study_phonogram">phonogram</string>
    <string name="study_word">word</string>
    <string name="study_chat_bot">chat_bot</string>
    <string name="study_debate">debate</string>
    <string name="study_syllable_sub">Let\'s study syllable.</string>
    <string name="study_phonogram_sub">Let\'s study phonogram.</string>
    <string name="study_word_sub">Let\'s study word.</string>
    <string name="study_chat_bot_sub">Let\'s study conversation with chat bot.</string>
    <string name="study_debate_sub">Let\'s study for debate</string>
    <string name="facebook_app_id">298725060748880</string>
    <string name="fb_login_protocol_scheme">fb298725060748880</string>
    <string name="basic_image">https://scontent-icn1-1.xx.fbcdn.net/v/t31.0-8/27907736_1967341869959997_2548572416065969343_o.jpg?_nc_cat=110&amp;_nc_ht=scontent-icn1-1.xx&amp;oh=32ecd316cfdc923af85840ee22d76a2e&amp;oe=5C78BB02</string>
</resources>
